--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>hello world!</h1>
-        <p> this is a test.</p>
-    </body>
+<head>
+    <title>sm1</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        .latex4000Webring {
+            margin-top: 20px;
+        }
+        .latex4000WebringButtons a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: blue;
+        }
+    </style>
+</head>
+<body>
+    <h1>sm1</h1>
+    <p>Welcome.</p>
+    <div class="latex4000Webring">
+        <a href="https://nonacademic.net" title="Collective">Latex 4000</a>
+        <div class="latex4000WebringButtons">
+            <a href="https://nonacademic.net/ring?action=prev&amp;from=sm1" title="Previous">←</a>
+            <a href="https://nonacademic.net/ring?action=rand&amp;from=sm1" title="Random">Random</a>
+            <a href="https://nonacademic.net/ring?action=next&amp;from=sm1" title="Next">→</a>
+        </div>
+    </div>
+</body>
 </html>
