--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <title>sm1</title>
     <style>
         body {
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
             font-family: Arial, sans-serif;
+            text-align: center;
         }
         .latex4000Webring {
             margin-top: 20px;
