--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
 </head>
 <body>
     <h1>sm1</h1>
-    <p>Welcome.</p>
+    <p>welcome.</p>
+    <a href="https://soundcloud.com/itsnotsome1">soundcloud</a>
+<span class="separator">|</span>
+<a href="https://x.com/itsnotsome1">twitter</a>
+<span class="separator">|</span>
+<a href="https://www.twitch.tv/itsnotsome1">twitch</a>
+
+<style>
+  .separator {
+    color: gray;
+    margin: 0 5px;
+  }
+</style>
     <div class="latex4000Webring">
         <a href="https://nonacademic.net" title="Collective">Latex 4000</a>
         <div class="latex4000WebringButtons">
