--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
 <a href="https://www.twitch.tv/itsnotsome1">twitch</a>
 
 <style>
+.nav {
+    display: flex;
+    gap: 5px; 
+  }
+  .nav a {
+    text-decoration: none;
+    color: blue;
+  }
   .separator {
-    color: gray;
-    margin: 0 5px;
+    color: gray; 
   }
 </style>
     <div class="latex4000Webring">
