--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             text-align: center;
         }
         .nav {
-            display: flex; 
-            gap: 10px; 
+            display: flex; /* Make links appear in a single line */
+            gap: 10px; /* Add spacing between links and separators */
             margin-top: 20px;
         }
         .nav a {
-            text-decoration: none; 
-            color: blue; 
+            text-decoration: none; /* Remove underline */
+            color: blue; /* Link color */
         }
         .separator {
-            color: gray; /
+            color: gray; /* Vertical bar color */
         }
         .latex4000Webring {
             margin-top: 20px;
@@ -33,10 +33,15 @@
             text-decoration: none;
             color: blue;
         }
+        .image-below-title {
+            margin: 10px 0; /* Add spacing around the image */
+            max-width: 200px; /* Limit the size of the GIF */
+        }
     </style>
 </head>
 <body>
     <h1>sm1</h1>
+    <img class="image-below-title" src="https://uk.pinterest.com/counterfeitstudio/i-gif-s/" alt="Cool GIF">
     <p>welcome.</p>
     
     <div class="nav">
