--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             text-align: center;
         }
         .nav {
-            display: flex; /* Make links appear in a single line */
-            gap: 10px; /* Add spacing between links and separators */
+            display: flex; 
+            gap: 10px; 
             margin-top: 20px;
         }
         .nav a {
-            text-decoration: none; /* Remove underline */
+            text-decoration: none; 
             color: blue; /* Link color */
         }
         .separator {
-            color: gray; /* Vertical bar color */
+            color: gray; 
         }
         .latex4000Webring {
             margin-top: 20px;
@@ -34,14 +34,14 @@
             color: blue;
         }
         .image-below-title {
-            margin: 10px 0; /* Add spacing around the image */
-            max-width: 200px; /* Limit the size of the GIF */
+            margin: 10px 0; 
+            max-width: 200px; 
         }
     </style>
 </head>
 <body>
     <h1>sm1</h1>
-    <img class="image-below-title" src="https://uk.pinterest.com/counterfeitstudio/i-gif-s/" alt="Cool GIF">
+    <img class="image-below-title" src="https://mad.s-ul.eu/63pecYaC.gif" alt="lmao">
     <p>welcome.</p>
     
     <div class="nav">
