--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <span class="separator">|</span>
         <a href="https://x.com/itsnotsome1">twitter</a>
         <span class="separator">|</span>
-        <a href="https://www.twitch.tv/itsnotsome1">twitch</a>
+        <a href="https://www.last.fm/user/aelelex">last.fm</a>
     </div>
 
     <div class="latex4000Webring">
