--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <img class="image-below-title" src="https://mad.s-ul.eu/63pecYaC.gif" alt="lmao">   
     <div class="nav">
         <a href="https://soundcloud.com/itsnotsome1">soundcloud</a>
-        <span class="separator">|</span>
+        <span class="separator"> </span>
         <a href="https://x.com/itsnotsome1">twitter</a>
-        <span class="separator">|</span>
+        <span class="separator"> </span>
         <a href="https://www.last.fm/user/aelelex">last.fm</a>
     </div>
 
