--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sm1</title>
     <style>
+        :root {
+            --background-color: #ffffff;
+            --text-color: #000000;
+            --link-color: blue;
+        }
+
+        [data-theme="dark"] {
+            --background-color: #121212;
+            --text-color: #ffffff;
+            --link-color: lightblue;
+        }
+
         body {
+            background-color: var(--background-color);
+            color: var(--text-color);
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -16,6 +30,20 @@
             font-family: Arial, sans-serif;
             text-align: center;
             box-sizing: border-box;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .theme-toggle {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+        .theme-toggle input {
+            cursor: pointer;
         }
         .nav {
             display: flex;
@@ -26,11 +54,8 @@
         }
         .nav a {
             text-decoration: none;
-            color: blue;
+            color: var(--link-color);
             font-size: 1rem;
-        }
-        .separator {
-            display: none; 
         }
         .latex4000Webring {
             margin-top: 2rem;
@@ -43,12 +68,12 @@
         }
         .latex4000WebringButtons a {
             text-decoration: none;
-            color: blue;
+            color: var(--link-color);
             font-size: 1rem;
         }
         .image-below-title {
             margin: 1rem 0;
-            max-width: 90%;
+            max-width: 90%; /* Responsive width */
             height: auto;
         }
 
@@ -64,6 +89,10 @@
     </style>
 </head>
 <body>
+    <div class="theme-toggle">
+        <label for="themeSwitch">Dark Theme</label>
+        <input type="checkbox" id="themeSwitch" />
+    </div>
     <img class="image-below-title" src="https://mad.s-ul.eu/63pecYaC.gif" alt="lmao">
     <h1>sm1</h1>
     <div class="nav">
@@ -80,5 +109,31 @@
             <a href="https://nonacademic.net/ring?action=next&amp;from=sm1" title="Next">→</a>
         </div>
     </div>
+
+    <script>
+        const themeSwitch = document.getElementById('themeSwitch');
+        const rootElement = document.documentElement;
+
+        themeSwitch.addEventListener('change', () => {
+            if (themeSwitch.checked) {
+                rootElement.setAttribute('data-theme', 'dark');
+            } else {
+                rootElement.setAttribute('data-theme', 'light');
+            }
+        });
+
+        // Save user preference to localStorage
+        themeSwitch.addEventListener('change', () => {
+            const theme = themeSwitch.checked ? 'dark' : 'light';
+            localStorage.setItem('theme', theme);
+        });
+
+        // Load user preference on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedTheme = localStorage.getItem('theme') || 'light';
+            themeSwitch.checked = savedTheme === 'dark';
+            rootElement.setAttribute('data-theme', savedTheme);
+        });
+    </script>
 </body>
 </html>
