--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <div class="latex4000Webring">
         <a href="https://nonacademic.net" title="Collective">Latex 4000</a>
         <div class="latex4000WebringButtons">
-            <a href="https://nonacademic.net/ring?action=prev&amp;from=sm1" title="Previous">←</a>
+            <a href="https://nonacademic.net/ring?action=prev&amp;from=sm1" title="Previous">←prev</a>
             <a href="https://nonacademic.net/ring?action=rand&amp;from=sm1" title="Random">Random</a>
-            <a href="https://nonacademic.net/ring?action=next&amp;from=sm1" title="Next">→</a>
+            <a href="https://nonacademic.net/ring?action=next&amp;from=sm1" title="Next">next→</a>
         </div>
     </div>
 
