--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="latex4000Webring">
-        <a href="https://nonacademic.net" title="Collective">Latex 4000</a>
+        <a href="https://nonacademic.net" title="Collective">l4k</a>
         <div class="latex4000WebringButtons">
             <a href="https://nonacademic.net/ring?action=prev&amp;from=sm1" title="Previous">←</a>
             <a href="https://nonacademic.net/ring?action=rand&amp;from=sm1" title="Random">rand</a>
