--- a/index.html
+++ b/index.html
@@ -1,94 +1,145 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sm1</title>
-    <style>
-        :root {
-            --background-color: #121212;
-            --text-color: #ffffff;
-            --link-color: lightblue;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>sm1</title>
+  <style>
+    :root {
+      --background-color: #121212;
+      --text-color: #ffffff;
+      --link-color: lightblue;
+    }
 
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding: 1rem;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            box-sizing: border-box;
-        }
+    body {
+      background-color: var(--background-color);
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      padding: 1rem;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      box-sizing: border-box;
+    }
 
-        .nav {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-            margin-top: 1.5rem;
-        }
+    .nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1.5rem;
+    }
 
-        .nav a {
-            text-decoration: none;
-            color: var(--link-color);
-            font-size: 1rem;
-        }
+    .nav a {
+      text-decoration: none;
+      color: var(--link-color);
+      font-size: 1rem;
+    }
 
-        .latex4000Webring {
-            margin-top: 2rem;
-        }
+    .latex4000Webring {
+      margin-top: 2rem;
+    }
 
-        .latex4000WebringButtons {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            margin-top: 0.5rem;
-        }
+    .latex4000WebringButtons {
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+      margin-top: 0.5rem;
+    }
 
-        .latex4000WebringButtons a {
-            text-decoration: none;
-            color: var(--link-color);
-            font-size: 1rem;
-        }
+    .latex4000WebringButtons a {
+      text-decoration: none;
+      color: var(--link-color);
+      font-size: 1rem;
+    }
 
-        .image-below-title {
-            margin: 1rem 0;
-            max-width: 90%;
-            height: auto;
-        }
+    /* Cube styles */
+    .cube-container {
+      width: 150px;
+      height: 150px;
+      perspective: 600px;
+      margin-bottom: 1.5rem; /* space between cube and title */
+    }
 
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 1.5rem;
-            }
-            .nav a, .latex4000WebringButtons a {
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+    .cube {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      animation: rotate 8s infinite linear;
+    }
+
+    .cube div {
+      position: absolute;
+      width: 150px;
+      height: 150px;
+      background: rgba(0, 0, 0, 0.6); /* transparent black fill */
+      border: 2px solid #fff;         /* white outlines */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1rem;
+      color: #fff;
+    }
+
+    .front  { transform: rotateY(  0deg) translateZ(75px); }
+    .back   { transform: rotateY(180deg) translateZ(75px); }
+    .right  { transform: rotateY( 90deg) translateZ(75px); }
+    .left   { transform: rotateY(-90deg) translateZ(75px); }
+    .top    { transform: rotateX( 90deg) translateZ(75px); }
+    .bottom { transform: rotateX(-90deg) translateZ(75px); }
+
+    @keyframes rotate {
+      from { transform: rotateX(0deg) rotateY(0deg); }
+      to   { transform: rotateX(360deg) rotateY(360deg); }
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+      .nav a, .latex4000WebringButtons a {
+        font-size: 0.9rem;
+      }
+      .cube-container {
+        width: 100px;
+        height: 100px;
+      }
+      .cube div {
+        width: 100px;
+        height: 100px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <img class="image-below-title" src="https://mad.s-ul.eu/63pecYaC.gif" alt="lmao">
-    <h1>sm1</h1>
-    <div class="nav">
-        <a href="https://soundcloud.com/itsnotsome1">soundcloud</a>
-        <a href="https://x.com/itsnotsome1">twitter</a>
-        <a href="https://www.last.fm/user/aelelex">last.fm</a>
+  <div class="cube-container">
+    <div class="cube">
+      <div class="front"> </div>
+      <div class="back"> </div>
+      <div class="right"> </div>
+      <div class="left"> </div>
+      <div class="top"> </div>
+      <div class="bottom"> </div>
     </div>
-
-    <div class="latex4000Webring">
-        <a href="https://nonacademic.net" title="Collective">l4k</a>
-        <div class="latex4000WebringButtons">
-            <a href="https://nonacademic.net/ring?action=prev&amp;from=sm1" title="Previous">←</a>
-            <a href="https://nonacademic.net/ring?action=rand&amp;from=sm1" title="Random">rand</a>
-            <a href="https://nonacademic.net/ring?action=next&amp;from=sm1" title="Next">→</a>
-        </div>
+  </div>
+  <h1>sm1</h1>
+  <div class="nav">
+    <a href="https://soundcloud.com/itsnotsome1">soundcloud</a>
+    <a href="https://x.com/itsnotsome1">twitter</a>
+    <a href="https://www.last.fm/user/aelelex">last.fm</a>
+  </div>
+  <div class="latex4000Webring">
+    <a href="https://nonacademic.net" title="Collective">l4k</a>
+    <div class="latex4000WebringButtons">
+      <a href="https://nonacademic.net/ring?action=prev&amp;from=sm1" title="Previous">←</a>
+      <a href="https://nonacademic.net/ring?action=rand&amp;from=sm1" title="Random">rand</a>
+      <a href="https://nonacademic.net/ring?action=next&amp;from=sm1" title="Next">→</a>
     </div>
+  </div>
 </body>
 </html>
