--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       width: 150px;
       height: 150px;
       perspective: 600px;
-      margin-bottom: 1.5rem; /* space between cube and title */
+      margin-bottom: 1.5rem; 
     }
 
     .cube {
@@ -77,8 +77,8 @@
       position: absolute;
       width: 150px;
       height: 150px;
-      background: rgba(0, 0, 0, 0.6); /* transparent black fill */
-      border: 2px solid #fff;         /* white outlines */
+      background: rgba(0, 0, 0, 0.6); 
+      border: 2px solid #fff;     
       display: flex;
       justify-content: center;
       align-items: center;
