--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     }
 
     .cube div {
-      position: absolute;
+      position: flex;
       width: 150px;
       height: 150px;
       background: rgba(0, 0, 0, 0.6); 
