--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <a href="https://soundcloud.com/itsnotsome1">soundcloud</a>
     <a href="https://x.com/itsnotsome1">twitter</a>
     <a href="https://www.last.fm/user/aelelex">last.fm</a>
+    <a href="hardware.html">hardware</a>
   </div>
   <div class="latex4000Webring">
     <a href="https://nonacademic.net" title="Collective">l4k</a>
