--- a/hardware.html
+++ b/hardware.html
@@ -15,49 +15,67 @@
       background-color: var(--background-color);
       color: var(--text-color);
       display: flex;
-      flex-direction: column;
+      justify-content: center;   
+      align-items: center;       
       height: 100vh;
       margin: 0;
-      padding: 1rem;
       font-family: Arial, sans-serif;
       box-sizing: border-box;
     }
 
-    .nav {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1.5rem;
+    .content {
+      max-width: 600px;          
+      text-align: left;          
+      line-height: 1.4;          
     }
 
- 
- 
+    h1, h2 {
+      margin-bottom: 0.5rem;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 1.5rem 0;
+    }
+
+    li {
+      margin-bottom: 0.3rem;
+    }
+
+    a {
+      color: var(--link-color);
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <h1>pc specs</h1>
-	<li> cpu — amd ryzen 7 9800x3d </li>
-	<li> mobo — asus b650-e wifi atx am5 motherboard </li>
-	<li> cooler — noctua nh-d15 chromax.black </li>
-	<li> ram — g.skill flare x5 2x16gb ddr5-6000 cl30 </li>
-	<li> gpu — asus dual oc geforce rtx 4070 12gb </li>
-	<li> case — nzxt h510i atx mid tower case</li>
-	<li> psu — seasonic focus plus 750w </li>
-	
-   <h2>gear</h1>
-	<li> headphones — sennheiser hd 599se </li>
-	<li> iem — moondrop chu 2 </li>
-	<li> keyboard — bakeneko65 w/ gateron oil king + pbt yukihana </li>
-	<li> mouse — logitech g pro x superlight 2 </li>
-	<li> monitor 1 — dell s2721dgf 165hz 1440p </li>
-	<li> monitor 2 — acer xfa240 144hz 1080p</li>
-	<li> audio interface — focusrite scarlett solo gen 3 </li>
-	<li> mic — some fifine xlr mic </li>
-	<li> capture card — avermedia live gamer extreme 3 gc551g2 </li>
-   <h3> </h3>
-  </div>
-  <a href="index.html">go back home</a>
-</body>
+  <div class="content">
+    <h1>pc specs</h1>
+    <ul>
+      <li>cpu — amd ryzen 7 9800x3d</li>
+      <li>mobo — asus b650-e wifi atx am5 motherboard</li>
+      <li>cooler — noctua nh-d15 chromax.black</li>
+      <li>ram — g.skill flare x5 2x16gb ddr5-6000 cl30</li>
+      <li>gpu — asus dual oc geforce rtx 4070 12gb</li>
+      <li>case — nzxt h510i atx mid tower case</li>
+      <li>psu — seasonic focus plus 750w</li>
+    </ul>
 
+    <h2>gear</h2>
+    <ul>
+      <li>headphones — sennheiser hd 599se</li>
+      <li>iem — moondrop chu 2</li>
+      <li>keyboard — bakeneko65 w/ gateron oil king + pbt yukihana</li>
+      <li>mouse — logitech g pro x superlight 2</li>
+      <li>monitor 1 — dell s2721dgf 165hz 1440p</li>
+      <li>monitor 2 — acer xfa240 144hz 1080p</li>
+      <li>audio interface — focusrite scarlett solo gen 3</li>
+      <li>mic — some fifine xlr mic</li>
+      <li>capture card — avermedia live gamer extreme 3 gc551g2</li>
+    </ul>
+	<p> last updated: sept 6 2025</p>
+    <a href="index.html">go back home</a>
+  </div>
+</body>
 </html>
