--- a/hardware.html
+++ b/hardware.html
@@ -11,7 +11,7 @@
     }
 
 	body {
-	  background: black url("https://mad.s-ul.eu/63pecYaC.gif") no-repeat center center fixed;
+	  background: black url("img/cube.gif") no-repeat center center fixed;
 	  background-size: cover;  
 	  color: var(--text-color);
 	  display: flex;
@@ -92,3 +92,4 @@
   </div>
 </body>
 </html>
+
