--- a/hardware.html
+++ b/hardware.html
@@ -87,9 +87,10 @@
       <li>mic — some fifine xlr mic</li>
       <li>capture card — avermedia live gamer extreme 3 gc551g2</li>
     </ul>
-
+	<p>last updated: sept 05 2025</p>
     <a href="index.html">go back home</a>
   </div>
 </body>
 </html>
+
 
