--- a/hardware.html
+++ b/hardware.html
@@ -67,11 +67,11 @@
     <h1>pc specs</h1>
     <ul>
       <li>cpu — amd ryzen 7 9800x3d</li>
-      <li>mobo — asus b650-e wifi atx am5 motherboard</li>
-      <li>cooler — noctua nh-d15 chromax.black</li>
+      <li>mobo — gigabyte b650i aorus ultra</li>
+      <li>cooler — arctic liquid freezer iii 280 aio </li>
       <li>ram — g.skill flare x5 2x16gb ddr5-6000 cl30</li>
       <li>gpu — asus dual oc geforce rtx 4070 12gb</li>
-      <li>case — nzxt h510i atx mid tower case</li>
+      <li>case — ssupd meshroom s v2 + expansion bracket </li>
       <li>psu — seasonic focus plus 750w</li>
     </ul>
 
@@ -92,5 +92,6 @@
   </div>
 </body>
 </html>
+
 
 
