--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ h1 { margin: 0.5rem 0; }
 <p></p>
 <h1>sm1</h1>
 <div class="nav">
-  <a href="https://soundcloud.com/notyourplace">soundcloud</a>
-  <a href="https://x.com/itsnotsome1">twitter</a>
+  <a href="https://soundcloud.com/notyourplace">sc</a>
+  <a href="https://x.com/itsnotsome1">twtr</a>
   <a href="https://www.last.fm/user/aelelex">last.fm</a>
-  <a href="https://www.twitch.tv/itsnotsome1">twitch</a>
-  <a href="https://www.youtube.com/@itsnotsome1">youtube</a>
+  <a href="https://www.twitch.tv/itsnotsome1">ttv</a>
+  <a href="https://www.youtube.com/@itsnotsome1">yt</a>
   <a href="hardware.html">hardware</a>
 </div>
 
