--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ h1 { margin: 0.5rem 0; }
 <h1>sm1</h1>
 <div class="nav">
   <a href="https://soundcloud.com/notyourplace">sc</a>
-  <a href="https://x.com/itsnotsome1">twtr</a>
+  <a href="https://x.com/itsnotsome1">twt</a>
   <a href="https://www.last.fm/user/aelelex">last.fm</a>
   <a href="https://www.twitch.tv/itsnotsome1">ttv</a>
   <a href="https://www.youtube.com/@itsnotsome1">yt</a>
