--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ h1 { margin: 0.5rem 0; }
   <a href="https://www.last.fm/user/aelelex">last.fm</a>
   <a href="https://www.twitch.tv/itsnotsome1">ttv</a>
   <a href="https://www.youtube.com/@itsnotsome1">yt</a>
-  <a href="hardware.html">hardware</a>
+  <a href="hardware.html"> </a>
 </div>
 
 <div class="latex4000Webring">
